# entities-service

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Dockerfile  README.md  build_cli_docs.sh  compose.yml  coverage_entrypoint.sh  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/docker_init/: 1_setup_mongo_security.sh  2_create_x509_user.js  create_x509_user.js
.github/utils/: .pre-commit-config_testing.yaml  coverage_entrypoint.sh  docker_test.py  requirements_docker_test.txt  run_pre-commit_hooks.py  run_with_coverage.py
.github/workflows/: cd_onto-ns.yml  cd_release.yml  ci_automerge_dependencies.yml  ci_cd_updated_main.yml  ci_check_dependencies.yml  ci_tests.yml  ci_update_dependencies.yml
dlite_entities_service/: config.py  main.py  models.py
dlite_entities_service/cli/: admin.py  config.py  main.py
dlite_entities_service/cli/_utils/: generics.py  global_settings.py
dlite_entities_service/models/: __init__.py  auth.py  dlite.py  soft.py  soft5.py  soft7.py
dlite_entities_service/service/: backend.py  config.py  exceptions.py  logger.py  models.py  security.py
dlite_entities_service/service/backend/: __init__.py  admin.py  backend.py  mongodb.py
dlite_entities_service/service/routers/: __init__.py  admin.py  auth.py
dlite_entities_service/utils_cli/: config.py  global_settings.py  main.py
dlite_entities_service/utils_cli/_utils/: global_settings.py
docs/: CLI.md
docs/example/: dlite_example.ipynb  dlite_example.py
entities_service/: __init__.py  main.py
entities_service/cli/: main.py
entities_service/cli/_utils/: generics.py  global_settings.py  types.py
entities_service/cli/commands/: __init__.py  config.py  list.py  list_entities.py  login.py  upload.py  validate.py
entities_service/models/: __init__.py  auth.py  dlite.py  dlite_soft.py  dlite_soft5.py  dlite_soft7.py  soft.py  soft5.py  soft7.py
entities_service/service/: config.py  security.py  utils.py
entities_service/service/backend/: __init__.py  backend.py  mongodb.py  test.py
entities_service/service/routers/: admin.py  api.py
tests/: conftest.py  test_main.py  test_main_core.py  test_main_specific.py  test_route.py  utils.py
tests/cli/: conftest.py  test_config.py  test_login.py  test_py312.py  test_upload.py
tests/cli/_utils/: test_generics.py  test_global_settings.py  test_types.py
tests/cli/commands/: conftest.py  test_config.py  test_list_entities.py  test_list_namespaces.py  test_list_util_funcs.py  test_login.py  test_upload.py  test_validate.py
tests/models/: test_init.py
tests/samples/valid_entities/: Cat.json
tests/service/: test_security.py  test_utils.py
tests/service/backend/: test_admin.py  test_mongodb.py
tests/service/routers/: test_admin.py  test_api_entities.py  test_api_namespaces.py  test_auth.py
tests/static/: entities.yaml  valid_entities.yaml
tests/static/invalid_entities/: Owl.json  Owl5.json  Person.json  README.md
tests/utils_cli/: conftest.py  test_upload.py
